# cheatengine

./: .gitignore  CMakeLists.txt
.kiro/specs/cheat-engine/: design.md  requirements.md  tasks.md
include/cheatengine/core/: application.hpp  errors.hpp
include/cheatengine/memory/: memory_region.hpp  memory_scanner.hpp  value_types.hpp
include/cheatengine/monitor/: value_monitor.hpp
include/cheatengine/process/: process_manager.hpp
include/cheatengine/writer/: memory_writer.hpp
src/: main.cpp
src/core/: errors.cpp
src/memory/: memory_region.cpp  memory_scanner.cpp  value_types.cpp
src/monitor/: value_monitor.cpp
src/process/: process_manager.cpp
src/writer/: memory_writer.cpp
